--- a/src/app/shared/image-upload-form/image-upload-form.component.css
+++ b/src/app/shared/image-upload-form/image-upload-form.component.css
@@ -1,18 +1,11 @@
-button {
-    border-radius: 25px;
-    font-size: 16px;
-    font-weight: bold;
-    background-color: #FFA100;
-    border: none;
-    padding: 10px 50px;
-    margin: 10px;
-  }
-  
-button:hover:enabled {
-    background-color: white;
-    cursor: pointer;
+form {
+    background-color: #f2f2f2;
+    padding: 20px;
+    border-radius: 10px;
+    margin-left: 10px;
 }
 
+/* Button for selecting file */
 input[type="file"] {
     display: none;
 }
@@ -31,24 +24,34 @@ input[type="file"] {
     cursor: pointer;
 }
 
-form {
-    background-color: #f2f2f2;
-    padding: 20px;
-    border-radius: 10px;
-    margin-left: 10px;
-}
-
 .upload-label-container {
-    margin: 10px;
+    margin: 10px auto;
 }
 
+/* Button for uploading */
+button {
+    border-radius: 25px;
+    font-size: 16px;
+    font-weight: bold;
+    background-color: #FFA100;
+    border: none;
+    padding: 10px 50px;
+    margin: 10px auto;
+  }
+  
+button:hover:enabled {
+    background-color: white;
+    cursor: pointer;
+}
+
+/* Progress-Bar and its text */
 .progress {
     display: block;
     border-style: solid;
     border-color: black;
     border-width: 2px;
     border-radius: 12px;
-    margin-left: 10px;
+    margin: 10px auto;
 }
 
 .progress-bar {
@@ -60,3 +63,8 @@ form {
     padding: 0px 10px;
 }
 
+@media (max-width: 767px) {
+    form {
+        margin: 50px auto;
+    }
+}
